# app/Http/Controllers/Auth/LoginController.php
@@ -53,4 +53,31 @@ class LoginController extends Controller
             return $this->errorResponse('User could not be logged in.', $th);
         }
     }
+
+    /**
+     * @OA\Get(
+     *    path="/api/v1/me",
+     *    tags={"Auth"},
+     *    summary="Get current logged in user data.",
+     *    description="Get current logged in user data.",
+     *    security={{"bearer":{}}},
+     *    @OA\Response(
+     *         response=200,
+     *         description="Success",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="success", type="boolean", example=true),
+     *             @OA\Property(property="message", type="string", example="User data fetched successfully."),
+     *             @OA\Property(property="data", type="object", example="null"),
+     *         )
+     *     )
+     * )
+     */
+    public function getLoggedInUser()
+    {
+        try {
+            return $this->successResponse('User data fetched successfully.', auth()->user());
+        } catch (\Throwable $th) {
+            return $this->errorResponse('User data could not be fetched.', $th);
+        }
+    }
 }
